# scikit-modknn

./: .gitignore  pyproject.toml  readme.md  setup.py
.github/workflows/: CI.yaml
scikit_modknn/: __init__.py  scikit_modknn.py
tests/: __init__.py  test_scikit_modknn.py
